--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - docker build -t a6596509538/simpleweb:latest.dev .
 
 script:
-  - docker run -it CI=true a6596509538/simpleweb:latest.dev
+  - docker run CI=true a6596509538/simpleweb:latest.dev
 
